test/Fail/Issue1698-field.err
Issue1698-field.agda:2.7: error: [ParseError]
=<ERROR>  Set

-- Error IS:  Parse erro...
